[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Textures/IntroBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/TopBarResourceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Textures/GUI/RoundRect1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Title.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Scenes/IntroScene.gd" type="Script" id=5]

[node name="IntroScene" type="Node"]
script = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -404.5
margin_top = 128.0
margin_right = 404.5
margin_bottom = 244.0
texture = ExtResource( 4 )

[node name="Menu" type="ColorRect" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -210.0
margin_top = 320.0
margin_right = 210.0
margin_bottom = 660.0
color = Color( 0.870588, 0.666667, 0.529412, 1 )

[node name="CenterContainer" type="CenterContainer" parent="HUD/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Menu/CenterContainer"]
margin_left = 139.0
margin_top = 44.0
margin_right = 281.0
margin_bottom = 296.0
custom_constants/separation = 20

[node name="CampaingButton" type="TextureButton" parent="HUD/Menu/CenterContainer/VBoxContainer"]
margin_right = 142.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="HUD/Menu/CenterContainer/VBoxContainer/CampaingButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Campa√±a"
align = 1
valign = 1

[node name="BattleButton" type="TextureButton" parent="HUD/Menu/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 142.0
margin_bottom = 116.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="HUD/Menu/CenterContainer/VBoxContainer/BattleButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Batalla"
align = 1
valign = 1

[node name="LoadButton" type="TextureButton" parent="HUD/Menu/CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 142.0
margin_bottom = 184.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="HUD/Menu/CenterContainer/VBoxContainer/LoadButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Cargar..."
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="HUD/Menu/CenterContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 142.0
margin_bottom = 252.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="HUD/Menu/CenterContainer/VBoxContainer/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Salir"
align = 1
valign = 1

[connection signal="pressed" from="HUD/Menu/CenterContainer/VBoxContainer/CampaingButton" to="." method="_on_CampaingButton_pressed"]
[connection signal="pressed" from="HUD/Menu/CenterContainer/VBoxContainer/BattleButton" to="." method="_on_BattleButton_pressed"]
[connection signal="pressed" from="HUD/Menu/CenterContainer/VBoxContainer/LoadButton" to="." method="_on_BattleButton_pressed"]
[connection signal="pressed" from="HUD/Menu/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
